form not showing correctly

--- a/lab-sam/app/component/app-modal-view/app-modal-view.scss
+++ b/lab-sam/app/component/app-modal-view/app-modal-view.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
 
-  div {
+  .back {
     position: absolute;
     z-index: 1;
     top: 0;
